# django-blog-app

./: .env.development.example  .env.docker.example  .env.example  .env.production.example  .env.staging.example  .eslintrc.js  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.js  .safety-policy.json  Makefile  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  dependency-update.yml  performance-monitoring.yml  rollback.yml  security-scan.yml
.kiro/specs/fullstack-monolith-transformation/: design.md  requirements.md  tasks.md
apps/api/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  PROJECT_STRUCTURE_ANALYSIS.md  README.md  WEBSOCKET_README.md  celery_app.py  personal_blog_dev  test_api_basic.py  test_api_implementation.py  test_optimization.html  test_seo_simple.py  validate_analytics_implementation.py  validate_api_rate_limiting_documentation.py  validate_authentication_implementation.py  validate_ckeditor_implementation.py  validate_comment_model.py  validate_dashboard_implementation.py  validate_post_detail_implementation.py  validate_profile_model.py  validate_rate_limiting_csrf.py  validate_role_based_authorization.py  validate_scheduling_implementation.py  validate_search_implementation.py  validate_security_implementation.py  validate_seo_implementation.py  websocket_client_example.py
apps/api/config/: asgi.py  urls.py  wsgi.py
apps/api/requirements/: base.txt  development.txt
apps/api/templates/: base.html  health.html  redoc.html  robots.txt
apps/api/tests/: __init__.py  test_accounts_authentication.py  test_accounts_models.py  test_analytics_dashboard.py  test_analytics_dashboard_comprehensive.py  test_analytics_page_tracking.py  test_api_rate_limiting_documentation.py  test_blog_ckeditor_integration.py  test_blog_models.py  test_blog_scheduling.py  test_blog_views_listing.py  test_comments_models.py  test_core_decorators.py  test_core_exceptions.py  test_core_integration.py  test_core_middleware.py  test_core_mixins.py  test_core_models.py  test_core_utils.py  test_core_validators.py  test_enhanced_api_features.py  test_post_detail_view.py  test_rate_limiting_csrf.py  test_role_based_authorization.py  test_search_analytics_implementation.py  test_search_functionality.py  test_security_implementation.py  test_seo_features.py  test_sitemaps.py  test_social_sharing_implementation.py  test_websocket_integration.py  validate_core_models.py
apps/mobile/: .eslintrc.js  .prettierrc.js  README.md  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: App.tsx
docs/: CODE_REVIEW_GUIDELINES.md  development-workflow.md  final_integration_validation.md
docs/deployment/: README.md  disaster-recovery.md
docs/security/: README.md  advanced-authentication.md
infrastructure/: README.md
infrastructure/database/: Dockerfile.pgbouncer  README.md  backup.sh  docker-compose.database.yml  init.sql  manage.py  migrate.py  pg_hba.conf  pgbouncer.ini  postgresql-replica.conf  postgresql.conf  restore.sh  seed.py  setup-replica.sh  userlist.txt
infrastructure/database/migrations/: 001_initial_schema.sql  rollback_001.sql
infrastructure/database/monitoring/: performance_monitor.py  slow_queries.sql
infrastructure/database/production/: docker-compose.prod.yml  postgresql.conf
infrastructure/database/seeds/: development_seed.sql  production_seed.sql  test_seed.sql
infrastructure/database/tests/: performance_tests.py
infrastructure/deployment/production/: README.md  deploy-production.ps1  deployment-validation.sh
infrastructure/k8s/: DEPLOYMENT_GUIDE.md  Makefile  README.md
infrastructure/k8s/base/: configmap.yaml  django-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  nextjs-deployment.yaml  nginx-deployment.yaml  persistent-volumes.yaml  pod-disruption-budget.yaml  postgres-deployment.yaml  rbac.yaml  redis-deployment.yaml  secrets.yaml  storage-classes.yaml
infrastructure/k8s/jobs/: backup-job.yaml  migration-job.yaml  migration-test-job.yaml
infrastructure/k8s/scripts/: deploy.ps1  deploy.sh  (+3 more)
infrastructure/nginx/: nginx.dev.conf  nginx.prod.conf
infrastructure/redis/: docker-compose.redis-cluster.yml  redis-cluster.conf  redis.conf  setup-cluster.ps1  setup-cluster.sh
monitoring/: README.md  docker-compose.monitoring.yml  setup-monitoring.ps1  setup-monitoring.sh
monitoring/alertmanager/: alertmanager.yml
monitoring/blackbox/: blackbox.yml
monitoring/grafana/: grafana.ini
monitoring/jaeger/: jaeger-config.yml
monitoring/loki/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: docker-setup.ps1  docker-setup.sh  final_integration_runner.py
tests/: README.md  conftest.py  jest.config.js  jest.setup.js  package.json  playwright.config.ts  pytest.ini  requirements.txt
tests/api/: postman-collection.json
tests/django/: conftest.py  test_api_endpoints.py  test_authentication.py
tests/e2e/: auth.spec.ts  blog.spec.ts  comprehensive_e2e_test.py  global-setup.ts  global-teardown.ts
tests/final/: deployment_readiness_summary.json  final_integration_report.json
tests/frontend/: setup.js
tests/integration/: final_integration_test.py
tests/mocks/: handlers.js  server.js
tests/monitoring/: test_apm_integration.py  test_monitoring_stack.py
tests/optimization/: database_optimization.py
tests/performance/: load-test.js  load_testing.py  stress-test.js
tests/security/: security_testing.py
tools/: README.md  TASK_25_IMPLEMENTATION_SUMMARY.md  api-client-generator.py  code-quality-validator.js  db-automation.py  hot-reload-config.js  hot-reload.config.json  makefile-db-commands.txt  setup-code-quality.ps1  setup-dev-environment.ps1  setup-dev-environment.sh  setup-testing.ps1  setup-testing.sh  test-runner.js  type-generator.py
tools/templates/: django-app.template.py  nextjs-component.template.js
(+235 files in other folders)
